sumo/tests/netconvert/errors/testsuite.netconvert
# Ordered list of tests in test suite. Add as appropriate


# Tests what happens if the output can not be written
false_output

# Tests what happens if no output is given
no_output

# Tests what happens if xml-edges can not be read
xml_false_edg

# Tests what happens if no xml-edges are given
xml_no_edg

# Tests what happens if xml-nodes can not be read
xml_false_nod

# Tests what happens if no xml-nodes are given
xml_no_nod






